stop icon being cut off on smaller screen sizes

--- a/src/component-library/yext/YextResultCardAskAQuestion/YextResultCardAskAQuestion.module.scss
+++ b/src/component-library/yext/YextResultCardAskAQuestion/YextResultCardAskAQuestion.module.scss
@@ -42,4 +42,9 @@
   display: flex;
   gap: $spacing-2;
   color: $red-100;
+
+  svg {
+    display: flex;
+    flex-shrink: 0;
+  }
 }
